[package]
name = "adventofcode2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day_01"
path = "src/day_01.rs"

[[bin]]
name = "day_02"
path = "src/day_02.rs"

[[bin]]
name = "day_03"
path = "src/day_03.rs"

[dependencies]
