[package]
name = "adventofcode2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day_01"
path = "src/day_01.rs"

[[bin]]
name = "day_02"
path = "src/day_02.rs"

[[bin]]
name = "day_03"
path = "src/day_03.rs"

[[bin]]
name = "day_04"
path = "src/day_04.rs"

[[bin]]
name = "day_05"
path = "src/day_05.rs"

[[bin]]
name = "day_06"
path = "src/day_06.rs"

[[bin]]
name = "day_07"
path = "src/day_07.rs"

[[bin]]
name = "day_08"
path = "src/day_08.rs"

[lib]
path = "src/lib.rs"

[dependencies]
