[package]
name = "adventofcode2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day_01"
path = "src/day_01.rs"

[[bin]]
name = "day_02"
path = "src/day_02.rs"

[[bin]]
name = "day_03"
path = "src/day_03.rs"

[[bin]]
name = "day_04"
path = "src/day_04.rs"

[[bin]]
name = "day_05"
path = "src/day_05.rs"

[[bin]]
name = "day_06"
path = "src/day_06.rs"

[[bin]]
name = "day_07"
path = "src/day_07.rs"

[[bin]]
name = "day_08"
path = "src/day_08.rs"

[[bin]]
name = "day_09"
path = "src/day_09.rs"

[[bin]]
name = "day_10"
path = "src/day_10.rs"

[[bin]]
name = "day_11"
path = "src/day_11.rs"

[[bin]]
name = "day_12"
path = "src/day_12.rs"

[[bin]]
name = "day_13"
path = "src/day_13.rs"

[[bin]]
name = "day_14"
path = "src/day_14.rs"

[[bin]]
name = "day_15"
path = "src/day_15.rs"

[[bin]]
name = "day_16"
path = "src/day_16.rs"

[[bin]]
name = "day_17"
path = "src/day_17.rs"

[[bin]]
name = "day_18"
path = "src/day_18.rs"

[[bin]]
name = "day_19"
path = "src/day_19.rs"

[lib]
path = "src/lib.rs"

[dependencies]
